-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17, 21, 22, 23
-
Component/s: client-libs
-
b05
The newInsets function is a helper function used in ThemeReader.cpp only, it should be declared as static. It ensures the function isn't visible outside its translation unit, it may enable additional optimizations, for example such a function can be inlined.