8322545: Declare newInsets as static in ThemeReader.cpp